# the-briefcase

./: .gitignore  AGENTS.md  CLAUDE.md  PLAYBOOK.md  README.md  consumer-notion-to-git-migration-plan.md  install.sh  project-overview.md  pyproject.toml  workflow-diagram.excalidraw
.briefcase/skills/: PLAYBOOK.md
.briefcase/template/: _inbox.md  adr.md  backlog.md  tasks.md  testing-strategy.md
.claude-plugin/: plugin.json
.github/workflows/: notion-backlog.yml  release-publish.yml
_agent_guideline/: architect-agent-guideline.md  ideation-agent-guideline.md  implementation-agent-guideline.md  review-agent-guideline.md
_doc_template/: backlog.md  brief.md  definition-of-done.md
_project/: decisions.md  definition-of-done.md  storage.yaml  tech-stack.md  testing-strategy.md
_project/feedback/: notion-setup-feedback-2026-03-20.md
docs/plan/: .sync-manifest.json  _inbox.md
scripts/: migrate_notion_pages.py
skills/: PLAYBOOK.md
skills/architect/: SKILL.md
skills/delivery-manager/: SKILL.md
skills/ideation/: SKILL.md
skills/implementation/: SKILL.md
skills/review/: SKILL.md
src/: __init__.py
src/cli/: helpers.py  main.py
src/core/: artifact_service.py  feedback.py  gitignore.py  manifest.py  release_gate.py  updater.py
src/migrations/: briefs_to_database.py
src/sync/: git_sync.py  snapshots.py  to_local.py  to_notion.py
template/: _inbox.md  agent.sh  backlog.md  brief.md  briefcase.sh  definition-of-done.md  release-notes.md  tasks.md  tech-stack.md  testing-strategy.md
tests/: conftest.py
tests/e2e/: test_cli_artifact_api.py  (+3 more)
(+177 files in other folders)
